--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- ✅ Fixed Image Filename -->
     <header>
-        <img src="images/iches-professional-photo.jpg" alt="Ichechuku Photo" class="profile-pic">
+        <img src="images/ICHES PROFESSIONAL PHOTO.jpg"alt="Iches pics" class="profile-pic">
         <span>Ichechuku Enwuka</span>
         <div class="menu-button">☰</div>
     </header>
