--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,12 +7,12 @@
     <meta name="author" content="Ichechuku Enwuka">
     <meta property="og:title" content="Timbuktu Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://https://ichestrings.github.io/wdd231/images/minh-pham-AHCmAX0k_J4-unsplash.jpg">
-    <meta property="og:url" content="https://https://ichestrings.github.io/wdd231">
+    <meta property="og:image" content="https://ichestrings.github.io/wdd231/images/minh-pham-AHCmAX0k_J4-unsplash.jpg">
+    <meta property="og:url" content="https://ichestrings.github.io/wdd231">
     <title>Timbuktu Chamber Directory</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="script/script.js" defer></script>
+    <script src="scripts/scripts.js" defer></script>
 </head>
 <body>
     <header>
