--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Ichechuku Enwuka">
     <meta property="og:title" content="Timbuktu Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://ichestrings.github.io/wdd231/images/minh-pham-AHCmAX0k_J4-unsplash.jpg">
-    <meta property="og:url" content="https://ichestrings.github.io/wdd231">
+    <meta property="og:image" content="images/minh-pham-AHCmAX0k_J4-unsplash.jpg">
+    <meta property="og:url" content="www.timbuktu.com">
     <title>Timbuktu Chamber Directory</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
