--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Timbuktu Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/minh-pham-AHCmAX0k_J4-unsplash.jpg">
-    <meta property="og:url" content="www.timbuktu.com">
+    <meta property="og:url" content="http://127.0.0.1:5500/chamber/directory.html">
     <title>Timbuktu Chamber Directory</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
