--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
 
   <main>
     <section class="hero">
-      <img src="images/austin-distel-mpN7xjKQ_Ns-unsplash.jpg" alt="Timbuktu Chamber">
+      <img src="/chamber/images/hero-image.jpg" alt="hero image">
       <div class="hero-text">
         <h1>Empowering Businesses in Timbuktu</h1>
         <p>Join us today and be a part of a thriving community.</p>
