--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Timbuktu Chamber of Commerce</title>
-  <meta name="description" content="Welcome to the Timbuktu Chamber of Commerce" />
-  <link rel="icon" href="favicon.ico" />
-  <link rel="stylesheet" href="styles/styles.css" />
+  <meta name="description" content="Welcome to the Timbuktu Chamber of Commerce"/>
+  <link rel="icon" href="favicon.ico"/>
+  <link rel="stylesheet" href="styles/styles.css"/>
   <script src="scripts/scripts.js" defer></script>
 </head>
 <body>
