--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Timbuktu Chamber of Commerce</title>
   <meta name="description" content="Welcome to the Timbuktu Chamber of Commerce"/>
+  <meta property="og:title" content="Timbuktu Chamber of Commerce" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/chamber/images/hero-image.jpg" />
+  <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/directory.html" />
+  
   <link rel="icon" href="favicon.ico"/>
   <link rel="stylesheet" href="styles/styles.css"/>
   <script src="scripts/scripts.js" defer></script>
