--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Ichechuku Enwuka">
   <meta name="description" content="Welcome to the Timbuktu Chamber of Commerce"/>
   <meta property="og:title" content="Timbuktu Chamber of Commerce"/>
-  <meta property="og:type" content="website"/>
+  <meta property="og:type" content="website">
   <meta property="og:image" content="https://ichestrings.github.io/wdd231/chamber/images/hero-image.jpg">
 
   <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/directory.html"/>
