--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover interesting places in Timbuktu with the Chamber of Commerce." />
+  <meta name="description" content="Explore must-see sites in Timbuktu with the Chamber of Commerce." />
   <meta name="author" content="Ichechuku Enwuka" />
-  <meta property="og:title" content="Discover Timbuktu" />
+  <meta property="og:title" content="Discover Timbuktu | Timbuktu Chamber of Commerce" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://ichestrings.github.io/wdd231/chamber/images/hero-image.jpg" />
   <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/discover.html" />
+  <title>Discover Timbuktu | Timbuktu Chamber of Commerce</title>
 
-  <title>Discover Timbuktu</title>
-
-  <link rel="stylesheet" href="chamber/styles/styles.css" />
-  <link rel="stylesheet" href="chamber/styles/discover.css" media="(min-width: 641px)" />
-  <link rel="stylesheet" href="chamber/styles/medium.css" media="(min-width: 1025px)" />
+  <link rel="stylesheet" href="/chamber/styles/styles.css" />
   <link rel="icon" href="favicon.ico" />
-
-  <script src="chamber/scripts/discover.js" defer></script>
+  <script src="/chamber/scripts/discover.js" defer></script>
 </head>
 <body>
   <header>
@@ -38,10 +34,11 @@
   </header>
 
   <main class="discover-grid">
+  <h2>Discover Timbuktu</h2>
     <aside class="sidebar" id="visitMessage" aria-live="polite"></aside>
 
     <section class="gallery" id="cardContainer">
-      <!-- Cards populated via JavaScript -->
+      <!-- Cards populated by JavaScript -->
     </section>
   </main>
 
@@ -49,6 +46,5 @@
     <p>&copy; <span id="year"></span> Timbuktu Chamber of Commerce</p>
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
-  
 </body>
 </html>
