--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,12 +6,12 @@
   <meta name="description" content="Explore must-see sites in Timbuktu with the Chamber of Commerce." />
   <meta name="author" content="Ichechuku Enwuka" />
   <meta property="og:title" content="Discover Timbuktu | Timbuktu Chamber of Commerce" />
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="website">
   <meta property="og:image" content="https://ichestrings.github.io/wdd231/chamber/images/hero-image.jpg" />
   <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/discover.html" />
   <title>Discover Timbuktu | Timbuktu Chamber of Commerce</title>
 
-  <link rel="stylesheet" href="/chamber/styles/styles.css" />
+  <link rel="stylesheet" href="/chamber/styles/styles.css">
   <link rel="icon" href="favicon.ico" />
   <script src="/chamber/scripts/discover.js" defer></script>
 </head>
