--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -11,9 +11,9 @@
   <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/discover.html" />
   <title>Discover Timbuktu | Timbuktu Chamber of Commerce</title>
 
-  <link rel="stylesheet" href="/chamber/styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" href="favicon.ico" />
-  <script src="/chamber/scripts/discover.js" defer></script>
+  <script src="scripts/discover.js" defer></script>
 </head>
 <body>
   <header>
