--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,7 +12,7 @@
   <title>Discover Timbuktu | Timbuktu Chamber of Commerce</title>
 
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="favicon.ico">
   <script src="scripts/discover.js" defer></script>
 </head>
 <body>
