--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Apply for Chamber of Commerce membership in Timbuktu." />
   <meta name="author" content="Ichechuku Enwuka" />
   <title>Join | Timbuktu Chamber of Commerce</title>
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://ichestrings.github.io/wdd231/chamber/images/hero-image.jpg" />
+  <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/discover.html" />
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="icon" href="favicon.ico" />
   <script src="scripts/join.js"></script>
