--- a/chamber/join.html
+++ b/chamber/join.html
@@ -11,10 +11,11 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://ichestrings.github.io/wdd231/chamber/images/hero-image.jpg" />
   <meta property="og:url" content="https://ichestrings.github.io/wdd231/chamber/discover.html" />
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" href="favicon.ico" />
   <script src="scripts/join.js"></script>
   <script src="scripts/thankyou.js"></script>
+  <script src="scripts/form.js"></script>
 
 
 </head>
@@ -73,10 +74,10 @@
       <label>
         Membership Level:
         <select name="membership" title="Select a membership level">
-          <option value="np">NP Membership</option>
-          <option value="bronze">Bronze Membership</option>
-          <option value="silver">Silver Membership</option>
-          <option value="gold">Gold Membership</option>
+          <option value="np">np membership</option>
+          <option value="bronze">bronze membership</option>
+          <option value="silver">silver membership</option>
+          <option value="gold">gold membership</option>
         </select>
       </label>
 
